Fix screen height bug
Made sure the container was the one that was filling.
Then made sure the cards were not spilling out of the grid.

--- a/styles.css
+++ b/styles.css
@@ -10,15 +10,15 @@
     }
       
     body {
-        height: 100%;
+
     }
     .container {
         text-align: center;
         display: grid;
-        grid-template-columns: 250px 1fr;
+        grid-template-columns: 300px 1fr;
         grid-template-rows: 200px 1fr;
         height: 100vh;
-        /* height: calc(100vh - 1rem - 20px); */
+ 
         /* gap: 4px; */
     }
 
@@ -28,6 +28,7 @@
         font-family: "Roboto", Helvetica, sans-serif;
         font-weight: bold;
         color: black;
+
 
     }
 
@@ -56,7 +57,8 @@
         flex-direction: column;
         text-align: left;
         gap: 1rem;
-       
+        
+      
     }
 
 
@@ -174,11 +176,9 @@
     .mainframe {
         display: grid;
         grid-template-columns: 3fr minmax(322px, 1fr);
-        grid-template-rows: min(500px);
+        grid-template-rows: min(750px);
         border-top: 5px solid lightgray !important;
         background-color: #bccbde;
-        
-        
     }
 
     .right-frame {
